--- a/playbooks/roles/bootstrap/tasks/main.yml
+++ b/playbooks/roles/bootstrap/tasks/main.yml
@@ -1,29 +1,29 @@
 ---
-- name: "'users' group exists"
+- name: "Create 'users' group"
   group:
     name: users
-- name: "'sudo' group exists"
+- name: "Create 'sudo' group"
   group:
     name: sudo
-- name: "'sudo' group has passwordless sudo"
+- name: "Configure passwordless sudo for 'sudo' group"
   lineinfile:
     dest: /etc/sudoers
     regexp: "^%sudo"
     line: "%sudo ALL=(ALL) NOPASSWD: ALL"
     validate: "visudo -cf %s"
-- name: '"{{ user }}" user account exists'
+- name: "Create '{{ user }}' user account exists"
   user:
     name: "{{ user }}"
     group: users
     groups: ["sudo"]
     append: true
-- name: "SSH identity keys are authorized"
+- name: "Add SSH identity keys to authorized keys"
   authorized_key:
     user: "{{ user }}"
     key: "{{ lookup('file', item) }}"
   with_fileglob:
     - "pubkeys/*"
-- name: "System is up-to-date"
+- name: "Apply system updates"
   apt:
     update_cache: true
     upgrade: safe
