--- a/playbooks/tasks/packages/Ubuntu/podman.yml
+++ b/playbooks/tasks/packages/Ubuntu/podman.yml
@@ -7,6 +7,7 @@
 - name: "Install podman and recommended dependencies"
   apt:
     name:
-      - podman
+      - dnsmasq
       - fuse-overlayfs
+      - podman
       - slirp4netns
