--- a/playbooks/roles/ijj.li/vars/main.yml
+++ b/playbooks/roles/ijj.li/vars/main.yml
@@ -1,9 +1,15 @@
 ---
+# Root directory for all container data on the host
+host_root_dir: "/home/{{ansible_user}}"
+
 # Directory for service configuration
-host_config_dir: "/home/{{ ansible_user }}/config"
+host_config_dir: "{{host_root_dir}}/config"
 
 # Directory for service data
-host_data_dir: "/home/{{ ansible_user }}/data"
+host_data_dir: "{{host_root_dir}}/data"
+
+# Directory for service image build files
+host_image_dir: "{{host_root_dir}}/images"
 
 # Email used for Let's Encrypt certificate expiry notifications
 letsencrypt_email: "paul@pshendry.com"
