Complete Podman role and use it for Caddy on ijj.li

--- a/inventory.yml
+++ b/inventory.yml
@@ -3,9 +3,9 @@
 all:
   hosts:
     ijj.li:
-      ansible_user: psh
   children:
     cloud:
       hosts:
         ijj.li:
-          ansible_user: psh
+  vars:
+    ansible_user: psh
