--- a/playbooks/roles/podman/tasks/main.yml
+++ b/playbooks/roles/podman/tasks/main.yml
@@ -39,11 +39,21 @@
           file:
             path: "/var/lib/systemd/linger/{{user}}"
             state: touch
+- name: "Stop and disable existing systemd service"
+  become: yes
+  systemd:
+    name: "{{service_name}}"
+    enabled: no
+    state: stopped
+  register: stop_systemd_service
+  # Return code of 5 is allowed (returned when service doesn't exist)
+  failed_when: stop_systemd_service.rc != 0 && stop_systemd_service != 5
 - name: "Create '{{pod_name}}' pod and containers"
   tags:
     - deploy
   become: yes
-  become_user: "{{user}}"
+  # TODO re-enable when using rootless podman
+  #become_user: "{{user}}"
   block:
     - name: "Check for existing pod"
       command: "podman pod exists {{pod_name}}"
@@ -59,21 +69,23 @@
       command: "podman create \
         --pod {{pod_name}} \
         --name {{item.name}} \
-        --user {{pod_uid}}:{{pod_gid}} \
-        {{item.run_args}} \
+        {% if not (item.default_user | default(false) | bool) %}--user {{pod_uid}}:{{pod_gid}} {% endif %}\
+        {{item.run_args | default('')}} \
         {{item.image}} \
-        {{item.cmd_args}}"
+        {{item.cmd_args | default('')}}"
       loop: "{{pod_containers}}"
-    - name: "Set permissions on host-mounted directories"
-      command: "podman unshare chown -R {{pod_uid}}:{{pod_gid}} {{item}}"
-      when: "(host_mounts | length > 0)"
-      loop: "{{host_mounts}}"
+    # TODO re-enable when using rootless podman
+    # - name: "Set permissions on host-mounted directories"
+    #   command: "podman unshare chown -R {{pod_uid}}:{{pod_gid}} {{item}}"
+    #   when: "(host_mounts | length > 0)"
+    #   loop: "{{host_mounts}}"
 - name: "Update '{{pod_name}}' pod images"
   tags:
     - never
     - update
   become: yes
-  become_user: "{{user}}"
+  # TODO re-enable when using rootless podman
+  #become_user: "{{user}}"
   command: "podman pull {{item.image}}"
   notify: Restart service
   loop: "{{pod_containers}}"
@@ -88,7 +100,8 @@
         state: directory
     - name: "Generate systemd service units"
       become: yes
-      become_user: "{{user}}"
+      # TODO re-enable when using rootless podman
+      #become_user: "{{user}}"
       command:
         chdir: "/home/{{user}}"
         cmd: "podman generate systemd --files --name {{pod_name}}"
@@ -148,7 +161,7 @@
   import_role:
     name: firewall
   vars:
-    ports: "{{service_ports}}"
+    ports: "{{expose_ports}}"
 - name: "Remove '{{pod_name}}' pod"
   tags:
     - never
@@ -165,7 +178,8 @@
     # Used for getting a list of unit filenames to delete
     - name: "Generate systemd service units"
       become: yes
-      become_user: "{{user}}"
+      # TODO re-enable when using rootless podman
+      #become_user: "{{user}}"
       command:
         chdir: "/home/{{user}}"
         cmd: "podman generate systemd --files --name {{pod_name}}"
@@ -186,5 +200,6 @@
       loop: "{{delete_service_units.stdout_lines}}"
     - name: "Remove '{{pod_name}}' pod"
       become: yes
-      become_user: "{{user}}"
+      # TODO re-enable when using rootless podman
+      #become_user: "{{user}}"
       command: "podman pod rm -f {{pod_name}}"
