--- a/playbooks/roles/home.pshendry.com/tasks/main.yml
+++ b/playbooks/roles/home.pshendry.com/tasks/main.yml
@@ -47,6 +47,21 @@
     - deploy
   become: yes
   block:
+    - name: "gitolite service"
+      block:
+        - name: "Create gitolite keys directory"
+          file:
+            path: "{{host_data_dir}}/gitolite/keys"
+            state: directory
+            # TODO re-enable these ownerships when using rootless podman
+            # owner: "{{service_user}}"
+            # group: "{{service_group}}"
+        - name: "Create gitolite data directory"
+          file:
+            path: "{{host_data_dir}}/gitolite/git"
+            state: directory
+            # owner: "{{service_user}}"
+            # group: "{{service_group}}"
     - name: "unifi service"
       block:
         - name: "Create Unifi data directory"
@@ -61,7 +76,6 @@
           copy:
             src: "rproxy/Caddyfile"
             dest: "{{host_config_dir}}/rproxy/"
-            # TODO re-enable these ownerships when using rootless podman
             # owner: "{{service_user}}"
             # group: "{{service_group}}"
             validate: "podman run --rm -v %s:/etc/Caddyfile quay.io/indeliblesoftware/caddy -conf /etc/Caddyfile -validate"
@@ -103,6 +117,28 @@
             # group: "{{service_group}}"
 - name: "Deploy services"
   block:
+    - name: "Create Gitolite pod"
+      import_role:
+        name: podman
+      vars:
+        user: "{{service_user}}"
+        group: "{{service_group}}"
+        pod_name: git
+        pod_create_args: "-p 23:22"
+        pod_uid: "1"
+        pod_gid: "1"
+        pod_containers:
+          - name: gitolite
+            image: docker.io/jgiannuzzi/gitolite
+            default_user: true
+            run_args: "\
+              -v {{host_data_dir}}/gitolite/keys:/etc/ssh/keys \
+              -v {{host_data_dir}}/gitolite/git:/var/lib/git"
+        host_mounts:
+          - "{{host_data_dir}}/gitolite/keys"
+          - "{{host_data_dir}}/gitolite/git"
+        expose_ports:
+          - 23/tcp
     - name: "Create unifi pod"
       import_role:
         name: podman
@@ -122,7 +158,7 @@
         pod_gid: "1"
         pod_containers:
           - name: unifi-controller
-            image: jacobalberty/unifi
+            image: docker.io/jacobalberty/unifi
             default_user: true
             run_args: "\
               --cap-drop all \
